crates/musli/tests/ui/enum_content_tag_error.stderr
error: #[musli] Unsupported type attribute
 --> tests/ui/enum_content_tag_error.rs:4:9
  |
4 | #[musli(unpacked, tag = "type")]
  |         ^^^^^^^^

error: #[musli] Unsupported type attribute
  --> tests/ui/enum_content_tag_error.rs:10:9
   |
10 | #[musli(unpacked, tag(value = "type"))]
   |         ^^^^^^^^

error: #[musli] Unsupported type attribute
  --> tests/ui/enum_content_tag_error.rs:16:9
   |
16 | #[musli(unpacked, content = "content")]
   |         ^^^^^^^^

error: #[musli] Unsupported type attribute
  --> tests/ui/enum_content_tag_error.rs:22:9
   |
22 | #[musli(unpacked, content(value = "content"))]
   |         ^^^^^^^^

error: #[musli] Unsupported type attribute
  --> tests/ui/enum_content_tag_error.rs:28:9
   |
28 | #[musli(unpacked, tag = "type", content = "content")]
   |         ^^^^^^^^

error: #[musli] Unsupported type attribute
  --> tests/ui/enum_content_tag_error.rs:34:9
   |
34 | #[musli(unpacked, tag(value = "type"), content(value = "content"))]
   |         ^^^^^^^^

error: In #[musli(Binary, ..)] an enum cannot be #[musli(transparent)]
  --> tests/ui/enum_content_tag_error.rs:40:9
   |
40 | #[musli(transparent, tag = "type")]
   |         ^^^^^^^^^^^

error: In #[musli(Binary, ..)] an enum cannot be #[musli(transparent)]
  --> tests/ui/enum_content_tag_error.rs:46:9
   |
46 | #[musli(transparent, content = "content")]
   |         ^^^^^^^^^^^

error: In #[musli(Binary, ..)] an enum cannot be #[musli(transparent)]
  --> tests/ui/enum_content_tag_error.rs:52:9
   |
52 | #[musli(transparent, tag = "type", content = "content")]
   |         ^^^^^^^^^^^
